--- a/Portfolio.html
+++ b/Portfolio.html
@@ -44,3 +44,81 @@
     </footer>
   </body>
 </html>
+***************************
+CSS code
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    background-color: grey;
+    padding: 0;
+}
+
+header {
+    background-color: black;
+    color: grey;
+    text-align: center;
+    padding: 20px 0;
+}
+
+header h1 {
+    margin: 0;
+}
+
+#about1 {
+    text-align: center;
+    padding: 1px 0;
+}
+
+#about {
+    text-align: center;
+    padding: 20px 0;
+}
+
+#about img {
+    width: 90px;
+    border-radius: 30%;
+}
+
+#skills {
+    text-align: left;
+    padding: 10px 0;
+}
+
+#skills ul {
+    list-style: none;
+}
+
+#projects {
+    text-align: center;
+    padding: 20px 0;
+}
+
+.project {
+    margin-bottom: 20px;
+}
+
+.project img {
+    max-width: 30%;
+    border-radius: 50x;
+}
+
+#resume,
+#contact {
+    text-align: center;
+    padding: 20px 0;
+}
+
+#resume a {
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+footer {
+    background-color: black;
+    color: grey;
+    text-align: center;
+    padding: 20px 0;
+}
